--- a/src/components/search/Search.module.scss
+++ b/src/components/search/Search.module.scss
@@ -15,6 +15,11 @@
   }
 }
 
+.search input,
+.search button {
+  vertical-align: middle;
+}
+
 .search form {
   background-color: $color-blue;
   padding: $space-big;
